# CG

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md
include/: camera.hpp  config.hpp  geometry.hpp  glut.hpp  group.hpp  lighting.hpp  model.hpp  parser.hpp  shape.hpp  shapegenerator.hpp  texture.hpp  transformation.hpp  utils.hpp  world.hpp
include/exceptions/: invalid_xml_file.hpp
models/: donut.3d  sphere.3d  teapot.3d
src/: camera.cpp  engine.cpp  generator.cpp  geometry.cpp  group.cpp  lighting.cpp  model.cpp  parser.cpp  shape.cpp  shapegenerator.cpp  texture.cpp  transformation.cpp  translation.cpp  utils.cpp  world.cpp
src/scripts/: ellipse_generator.py
test_files/test_files_phase_2/: test_2_3.xml
test_files/test_files_phase_4/: notes for phase IV.txt
xml/: dummy.xml  solarSystem.xml  solarSystem_no_axis.xml
